use org.apache.axiom.om.util.Base64 encoder instead sun's one
git-svn-id: https://svn.wso2.org/repos/wso2/carbon/platform/trunk@125848 a5903396-d722-0410-b921-86c7d4935375